--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,3 +31,9 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+      - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: github-pages
+        path: ./dist
+
